Parameter Install Management

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -64,3 +64,6 @@ Database Management: Database Management
 Table Management: Table Management
 Form Management: Form Management
 Validation Management: Validation Management
+error:
+    save: 
+        parameters: The parameter file was not save correctly.
