--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -67,3 +67,8 @@ Validation Management: Validation Management
 error:
     save: 
         parameters: The parameter file was not save correctly.
+success:
+    save:
+        parameters: The parameters file was saved.
+buildDatabase:
+    success: "The database was succesfully built.  Please sign in as 'admin' with password 'p@ssword' and set your personal profile." 
