--- a/src/Busybee/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
+++ b/src/Busybee/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
@@ -27,7 +27,7 @@ user:
         password_confirmation: Confirm Password 
         enabled: Enabled 
     help: 
-        username: You can leave the user name blank and the username will default to the email address. 
+        username: "You can leave the user name blank and the username will default to the email address. The username must not be 'admin'" 
         directroles: Direct Role allocation for a user should not be used unless the user needs a level of access not supplied by group selection.  Direct Roles are applied with the indirect roles inherited from the Groups to which the user belongs.
         groups: Groups are created by you to match a user to groups that provide authority to use the various pages in the site.  Groups are also used by the site to lists groups such as classes and parents of classes.
     edit:
@@ -35,6 +35,7 @@ user:
         description: You are able to change your own details on this page.
         success: The user record was saved successfully.
         error: The user details were NOT saved.
+        admin: "The username cannot equal 'admin'."
     registration:
         title: Register User 
         description: Register a new user. 
@@ -63,6 +64,7 @@ security:
         username: User Name or E-mail 
         submit: Request Password Reset 
         invalid_username: "The username / email was not found for %username%." 
+        forcePassword: "You must reset your password." 
     resetting:
         title: Password Reset EMail
         email:
