Pagination and User List and User Enable Toggle

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -53,6 +53,7 @@ menu:
             user: User Manage
             edit: Edit Self
             register: Register User 
+            list: Current Users 
     family:
         manage: Manage Family       
     people:
