--- a/src/Busybee/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
+++ b/src/Busybee/SecurityBundle/Resources/translations/BusybeeSecurityBundle.en_GB.yml
@@ -54,8 +54,8 @@ user:
     list:
         title: User List
         description: List of users configured on the site. 
-        username: User Name
-        email: Email Address
+        username: 'User Name'
+        email: 'Email Address'
         actions: Actions 
         enabled: Enabled 
 security:
@@ -129,3 +129,5 @@ group:
         title: Group List
         create: Create Group
 There was an error updating the settings: There was an error updating the settings.
+'The user %user% was enabled': 'The user %user% was enabled'
+'The user %user% was disabled': 'The user %user% was disabled'
