--- a/app/Resources/translations/messages.en_GB.yml
+++ b/app/Resources/translations/messages.en_GB.yml
@@ -6,7 +6,7 @@ success:
     save:
         parameters: Parameters successfully saved.
 buildDatabase:
-    success: The database was built successfully.
+    success: The database was built successfully.  Thank you for installing Busybee.
 Yes: Yes
 No: No
 '%name% at IP:%remoteIP% has failed to authenticate correctly.': '%name% at IP:%remoteIP% has failed to authenticate correctly.'
