--- a/src/Busybee/SystemBundle/Resources/translations/BusybeeSystemBundle.en_GB.yml
+++ b/src/Busybee/SystemBundle/Resources/translations/BusybeeSystemBundle.en_GB.yml
@@ -152,3 +152,4 @@ user:
     list:
         title: User List
         description: List of users configured on the site. 
+updateDatabase.success: 'Updated from version %version%'
