--- a/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
+++ b/src/Busybee/PaginationBundle/Resources/translations/BusybeePaginationBundle.en_GB.yml
@@ -11,3 +11,5 @@ pagination:
     figures: 'Page %current% of %pages%. Total Records: %total%'  
     next: ''
     prev: ''
+Family Name: Family Name
+Given Name: Given Name
