System Setting Manage

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -56,6 +56,8 @@ menu:
             edit: Edit Self
             register: Register User 
             list: Current Users 
+        setting:
+            manage: Manage Settings
     family:
         manage: Manage Family       
     people:
