--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -27,7 +27,7 @@ person:
         officialName: Official Name
         email: Email
         email2: Alternate Email
-        photo: Head Shot
+        photo: Portrait Photo
         gender: Gender
         website: Personal Web Site
         title: Personal Title
