Address for Person

--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -20,6 +20,7 @@ person:
     familyName: Family Name
     givenName: Given Name
     email: Email
+    contact: Contact Details
     label:
         surname: Family Name
         firstName: Given Name
@@ -59,10 +60,18 @@ address:
         test: Test
         choice: Choose an existing Address
         save: Save Address
+        clear: Clear Address
+        buildingType: Type of Building
+        buildingNumber: Building Number
+        streetNumber: Street Number
     help:
-        line1: Unit/Street Number Street Name Street Type
+        line1: Street Name and Type
         line2: Additional Address information.
-        choice: Use an existing address or create a new address using the form below.
+        choice: Use an existing address or create a new address using the form below.  To select an exising address, start typing the name.  The field will start a search after two characters are entered.  The choice only works when a locality is selected.
+        manage: "To reduce the amount of typing required, the system allows for addresses to be entered only once.  To select an existing address, select the locality in which the address id located.  If the locality does not   exist, then clear the locality selector, enter the new details and save the new locality. Once a locality is selected, you can start typing the name of the street in the address search box.  All matching addresses are presented for selection (limited to the first 20.) To create a new address, clear the address, select the appropriate locality, enter the new address details then save the address."
+        buildingType: ''
+        buildingNumber: The building identifier within the complex.
+        streetNumber: ''
     placeholder:
         choice: Choose Existing Address (Clear Data)
     test:
