Changes implemented in Core for AVETMISS NAT00030

--- a/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
+++ b/src/Busybee/HomeBundle/Resources/translations/BusybeeHomeBundle.en_GB.yml
@@ -78,6 +78,7 @@ menu:
         title: Reports
     campus:
         manage: Campus Manage
+    curriculum: Curriculum
 ajax:
     wait_message: saving data.. please wait.. 
 Security: Security
