--- a/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
+++ b/src/Busybee/PersonBundle/Resources/translations/BusybeePersonBundle.en_GB.yml
@@ -63,8 +63,8 @@ person:
         empty: can not be empty.
 address:
     label:
-        line1: Address Line 1
-        line2: Address Line 2
+        propertyName: Building / Property Name
+        streetName: Street Name
         test: Test
         choice: Choose an existing Address
         save: Save Address
@@ -73,10 +73,10 @@ address:
         buildingNumber: Building Number
         streetNumber: Street Number
     help:
-        line1: Street Name and Type
-        line2: Additional Address information.
+        propertyName: Property or Building Name
+        streetName: ''
         choice: Use an existing address or create a new address using the form below.  To select an exising address, start typing the name.  The field will start a search after two characters are entered.  The choice only works when a locality is selected.
-        manage: "To reduce the amount of typing required, the system allows for addresses to be entered only once.  To select an existing address, select the locality in which the address id located.  If the locality does not   exist, then clear the locality selector, enter the new details and save the new locality. Once a locality is selected, you can start typing the name of the street in the address search box.  All matching addresses are presented for selection (limited to the first 20.) To create a new address, clear the address, select the appropriate locality, enter the new address details then save the address. Save the person record (green button) to save the address to the person."
+        manage: "To reduce the amount of typing required, the system allows for addresses to be entered only once.  To select an existing address, select the locality in which the address is located.  If the locality does not exist, then clear the locality selector, enter the new details and save the new locality. Once a locality is selected, you can start typing the name of the street in the address search box.  All matching addresses are presented for selection (limited to the first 20.) To create a new address, clear the address, select the appropriate locality, enter the new address details then save the address. Save the person record (green button) to save the address to the person."
         buildingType: ''
         buildingNumber: The building identifier within the complex.
         streetNumber: ''
@@ -116,3 +116,5 @@ contact:
         delete: Delete Phone
         add: Add Phone
         saveWarning: Additions and removal of numbers are NOT saved until the person is saved.  Use the green Save button to save the person, or the light blue Cancel button to restore changes.  Each phone number is only stored once.
+people:
+    title: People
