NAT00080, Setting Import

--- a/app/Resources/translations/validators.en_GB.yml
+++ b/app/Resources/translations/validators.en_GB.yml
@@ -1,5 +1,9 @@
 regex:
     error: "Regex Error: %systemMessage%"
+array:
+    error: "Array Error: %systemMessage%"
+twig:
+    error: "Twig Error: %systemMessage%"
 person:
     error:
         phone: Not a valid phone number.
