--- a/src/Busybee/CampusBundle/Resources/translations/BusybeeCampusBundle.en_GB.yml
+++ b/src/Busybee/CampusBundle/Resources/translations/BusybeeCampusBundle.en_GB.yml
@@ -16,3 +16,6 @@ campus:
         territory: ''
         postcode: ''
         country: ''
+    placeholder:
+        locations: Select a Location
+'': ""
